# 20260306-logistic-excel-to-db

./: .env.example  .gitignore  README.md  UPDATE_PROCESS.md  VIP报价【空派+红单UPS&DHL】深圳云驼 2026.2.2  更新- .xlsx  config.py  export_excel_grids.py  import_to_pg.py  llm_readable_report.md  llm_readable_report.py  normalize_rates_to_pg.py  pricing_engine.py  pricing_schema.py  pyproject.toml  run_update_pipeline.py  update_manifest.template.csv  watch_incoming_logistics.py  九方通逊-空派专线价格表-2026.2.10  09：00.xlsx  天美通物流-报价表2026年2月2日-生效.xlsx
docs/: AGENT.md  UPDATE_PROCESS.md
logistics_ingest/: README.md
logistics_ingest/app/: export_service.py  header_parser.py  import_service.py  normalize_parser.py  normalize_parser_constants.py  normalize_service.py  pipeline_quality.py  pipeline_service.py  row_parser.py  section_parser.py  watcher_service.py
logistics_ingest/cli/: export_grids.py  import_raw.py  normalize_rates.py  run_pipeline.py  watch_incoming.py
logistics_ingest/domain/: models.py  provider_catalog.py
logistics_ingest/domain/rules/: __init__.py  cargo_rules.py  destination_rules.py  divisor_rules.py  surcharge_rules.py  transport_rules.py
logistics_ingest/infra/db/: __init__.py  connection.py  pipeline_metrics.py  pricing_repo.py  raw_repo.py  schema.py
logistics_ingest/infra/excel/: grid_exporter.py  workbook_reader.py
logistics_ingest/infra/fs/: __init__.py  file_ops.py  file_scanner.py  state_repo.py
logistics_ingest/infra/llm/: __init__.py  divisor_classifier.py  (+1 more)
logistics_ingest/shared/: ids.py  logging.py  manifest.py  settings.py  text_utils.py
